kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quizzes-backend-deployment
spec:
  selector:
    matchLabels:
      app: quizzes-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: quizzes-backend
    spec:
      containers:
      - name: quizzes-backend
        image: ${BACKEND_IMAGE}
        imagePullPolicy: Always
        resources:
          requests:
            memory: "150Mi"
            cpu: "10m"
          limits:
            memory: "400Mi"
            cpu: "50m"
        readinessProbe:
          httpGet:
            path: /api/healthz
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
        - name: backend-http
          containerPort: 3000
        - name: ws
          containerPort: 7000
