kubernetes/backendv2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quizzes-backendv2-deployment
spec:
  selector:
    matchLabels:
      app: quizzes-backendv2
  replicas: 2
  template:
    metadata:
      labels:
        app: quizzes-backendv2
    spec:
      containers:
      - name: quizzes-backendv2
        image: ${BACKENDV2_IMAGE}
        imagePullPolicy: Always
        resources:
          requests:
            memory: "300Mi"
            cpu: "60m"
          limits:
            memory: "900Mi"
            cpu: "600m"
        # readinessProbe:
        #   httpGet:
        #     path: /api/healthz
        #     port: 6000
        #   initialDelaySeconds: 5
        #   periodSeconds: 5
        ports:
        - name: backendv2-http
          containerPort: 3003
