kubernetes/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quizzes-dashboard-deployment
spec:
  selector:
    matchLabels:
      app: quizzes-dashboard
  replicas: 2
  template:
    metadata:
      labels:
        app: quizzes-dashboard
    spec:
      containers:
      - name: quizzes-dashboard
        image: gcr.io/moocfi/quizzes-dashboard:build-1560334426-8756ff08e2f30cfeac242ef551d3e083e3ef82fa
        imagePullPolicy: Always
        ports:
        - name: dashboard-http
          containerPort: 80
