kubernetes/kafka-background-producer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-background-producer-deployment
spec:
  selector:
    matchLabels:
      app: kafka-background-producer
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka-background-producer
    spec:
      containers:
      - name: kafka-background-producer
        image: ${BACKENDV2_IMAGE}
        command: ["npm", "run", "background-producer"]
        imagePullPolicy: Always
        resources:
          requests:
            memory: "300Mi"
            cpu: "100m"
          limits:
            memory: "500Mi"
            cpu: "500m"
