kubernetes/backendv2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quizzes-backendv2-service
  labels:
    app: quizzes-backendv2
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: backendv2-http
  selector:
    app: quizzes-backendv2
