kubernetes/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quizzes-dashboard-service
  labels:
    app: quizzes-dashboard
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: dashboard-http
  selector:
    app: quizzes-dashboard
