kubernetes/dashboardv2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: quizzes-dashboardv2-service
  labels:
    app: quizzes-dashboardv2
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: dashboardv2-http
  selector:
    app: quizzes-dashboardv2
