kubernetes/websocket-service.yml
apiVersion: v1
kind: Service
metadata:
  name: websocket
  labels:
    app: quizzes-backend
spec:
  type: NodePort
  ports:
  - port: 7000
    targetPort: ws
  selector:
    app: quizzes-backend
