kubernetes/backend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: quizzes-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: quizzes-backend
          servicePort: 80
