kubernetes/quizzes-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: quizzes-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.org/websocket-services: "ws"
spec:
  tls:
  - hosts:
    - quizzes.mooc.fi
    - quizzes2.mooc.fi
    secretName: quizzes-cert-secret
  rules:
    - host: quizzes.mooc.fi
      http:
        paths:
        - path: /api/
          backend:
            serviceName: quizzes-backend-service
            servicePort: 80
        - path: /api/v2/
          backend:
            serviceName: quizzes-backendv2-service
            servicePort: 80
        - path: /
          backend:
            serviceName: quizzes-dashboardv2-service
            servicePort: 80
    - host: quizzes2.mooc.fi
      http:
        paths:
        - path: /api/
          backend:
            serviceName: quizzes-backend-service
            servicePort: 80
        - path: /api/v2/
          backend:
            serviceName: quizzes-backendv2-service
            servicePort: 80
        - path: /
          backend:
            serviceName: quizzes-dashboard-service
            servicePort: 80
